--- a/src/assets/i18n/he.json
+++ b/src/assets/i18n/he.json
@@ -8,6 +8,7 @@
   "stms.menu.login": "התחברות",
   "stms.menu.logout": "התנתקות",
   "stms.menu.settings": "הגדרות",
+  "stms.menu.favorites": "UPDATE_TRANSLATION_LABEL",
 
   "stms.settings.animations.elements": "בזמן ניווט אלמנטים זיזים כלפי מעלה",
   "stms.settings.animations.page": "טרנזיציה מלאה בניוט לדף",
