--- a/src/assets/i18n/he.json
+++ b/src/assets/i18n/he.json
@@ -31,5 +31,6 @@
   "stms.patients.get-patients": "מצא נבדקים",
 
   "stms.orders.title": "הזמנות",
-  "stms.orders.get-orders": "מצא הזמנות"
+  "stms.orders.get-orders": "מצא הזמנות",
+  "stms.favorites.title": "UPDATE_TRANSLATION_LABEL"
 }
